tests/NormalTests/paczka1/small_fuzzy/15959597.err
Error in line 7: S75 A674 35,9
Error in line 9: uS59QY A66 1,5
Error in line 8: S75 A863 31,6
Error in line 10: uS59QY A674 68,6
